iss#199 Video Load Media Processing: width, height and extra not updating, Version 0.13.3